# tinympc-matlab

./: .gitignore  .gitmodules  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  tinympc_mex.cpp
examples/: Interactive_cartpole.mlx  cartpole_example_code_generation.m  cartpole_example_mpc.m  cartpole_example_mpc_reference_constrained.m  cartpole_example_one_solve.m  compile_tinympc_matlab.m  interactive_cartpole.m  interactive_cartpole.mlx  interactive_quadrotor_3d.m  quadrotor_hover_code_generation.m  rocket_landing_constraints.m  test_generated_code.m
generated_code/: CMakeLists.txt  README.md  tinympc_wrapper_mex.cpp
generated_code/src/: CMakeLists.txt  tiny_data_workspace.cpp  tiny_main.asv  tiny_main.cpp  tiny_wrapper.cpp
generated_code/tinympc/: CMakeLists.txt  glob_opts.hpp  tiny_data_workspace.hpp  tiny_wrapper.hpp
matlab_wrapper/: TinyMPC.m  codegen.hpp  wrapper.hpp
src/: TinyMPC.m  bindings.cpp
src/codegen_src/: CMakeLists.txt
src/matlab_wrapper/: TinyMPC.m  bindings.cpp  codegen.cpp  codegen.hpp  wrapper.cpp  wrapper.hpp
src/matlab_wrapper/wrapper/: CMakeLists.txt
src/tinympc/: codegen.asv  codegen.cpp
src/tinympc/TinyMPC/src/tinympc/: types.hpp
tests/: README.md  compare_examples_comprehensive.py  compare_py_matlab_examples.py  compile_tinympc_matlab.m  run_all_tests.m  test_basic_functionality.m  test_cache.m  test_cartpole_codegen.m  test_cartpole_example.m  test_quadrotor_codegen.m  test_settings.m  test_with_library.m
